WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209827
CRASH in MediaPlayerPrivateMediaSourceAVFObjC::addAudioRenderer(), uncaught ObjC exception
https://bugs.webkit.org/show_bug.cgi?id=209827
Summary
CRASH in MediaPlayerPrivateMediaSourceAVFObjC::addAudioRenderer(), uncaught O...
Jer Noble
Reported
2020-03-31 12:41:39 PDT
CRASH in MediaPlayerPrivateMediaSourceAVFObjC::addAudioRenderer(), uncaught ObjC exception
Attachments
Patch
(5.82 KB, patch)
2020-03-31 12:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.60 KB, patch)
2020-03-31 18:03 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.56 KB, patch)
2020-04-01 11:57 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-03-31 12:42:07 PDT
<
rdar://problem/61113080
>
Radar WebKit Bug Importer
Comment 2
2020-03-31 12:42:20 PDT
<
rdar://problem/61120016
>
Jer Noble
Comment 3
2020-03-31 12:46:55 PDT
Created
attachment 395081
[details]
Patch
Darin Adler
Comment 4
2020-03-31 12:51:50 PDT
Comment on
attachment 395081
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395081&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:903 > + ASSERT_NOT_REACHED();
I don’t really like using assertions like this. As a project we intend to use assertions for things that must *never* happen, not for things that *normally* don’t happen. The other cases in this patch seem to be truly "should never happen" cases, although I might be wrong about that.
Jer Noble
Comment 5
2020-03-31 12:57:45 PDT
Comment on
attachment 395081
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395081&action=review
>> Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:903 >> + ASSERT_NOT_REACHED(); > > I don’t really like using assertions like this. As a project we intend to use assertions for things that must *never* happen, not for things that *normally* don’t happen. > > The other cases in this patch seem to be truly "should never happen" cases, although I might be wrong about that.
My goal here is to catch this case in layout tests; this scenario could easily cause layout test flakiness in a totally un-diagnosable way. If we upgrade a bot to a new OS and this ASSERTion starts getting hit and generates crashlogs, we can immediately trace the cause to a particular OS revision. But maybe we can achieve this some other way, like through a WKTR or DRT only console log that would show up in the test .diff?
Darin Adler
Comment 6
2020-03-31 13:15:51 PDT
(In reply to Jer Noble from
comment #5
)
> My goal here is to catch this case in layout tests
Got it!
> But maybe we can achieve this some other way, like through a WKTR or DRT only console log that would show up in the test .diff?
Yes, I think there is quite a bit of logging that shows up in regression test results. Let's check on that.
Jer Noble
Comment 7
2020-03-31 18:03:29 PDT
Created
attachment 395117
[details]
Patch for landing
Jer Noble
Comment 8
2020-04-01 11:57:25 PDT
Created
attachment 395191
[details]
Patch for landing
EWS
Comment 9
2020-04-01 14:15:23 PDT
Committed
r259363
: <
https://trac.webkit.org/changeset/259363
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395191
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug