Source/WebCore/platform/graphics/MediaSourcePrivateClient.h
@@ -50,6 +50,9 @@ public:
 #if !RELEASE_LOG_DISABLED
     virtual void setLogIdentifier(const void*) = 0;
 #endif
+
+    enum class RendererType { Audio, Video };
+    virtual void failedToCreateRenderer(RendererType) = 0;
 };
 
 }
